@@ -1,0 +1,12 @@
+package app.dao;
+
+public enum Category {
+    JAVA,
+    JS,
+    REACT,
+    ANGULAR,
+    NODE,
+    GENERAL,
+    HTML,
+    CSS
+}
