@@ -7,9 +7,17 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Label?>
 
+<?import javafx.scene.layout.GridPane?>
 <BorderPane fx:controller="app.controllers.AddQuestionController" xmlns:fx="http://javafx.com/fxml">
     <center>
         <VBox id="centerContent">
+            <GridPane fx:id="categories">
+                <RadioButton>
+                    <toggleGroup>
+                        <ToggleGroup fx:id="categoryChoice" />
+                    </toggleGroup>
+                </RadioButton>
+            </GridPane>
             <Label text="Enter Question Here"/>
             <TextField fx:id="questionString" />
             <HBox styleClass="choices">
