@@ -16,7 +16,7 @@
 - Quiz Selection Page
     - remove java label  ------------
     - space between begin quiz and all questions buttons  ----------
-    - remove Verify button and have begin quiz button handle verification process
+    - remove Verify button and have begin quiz button handle verification process  ------
     - improve styling
 - Quiz Page
     - remove unnecessary info from left panel  ---------
@@ -39,6 +39,19 @@
 7/16/22
     - Add Question
         - bugs when adding fields with apostrophes. check for other unique characters (slash, quote, etc.)
+
+7/17/22
+    - Minor stuffs out of the way, time to do some real coding
+    - Implement tag/category to a question
+    - Goal is for the Quiz Selection page to display all available categories for user to pick from
+        - can pick multiple
+        - amount of Q's in category displayed
+        - can then select All questions or a # in the range of all clicked categories sum of questions
+            - if a # in range is chosen, a random amount of Q's from each category should be given
+    - Categories:
+        - Java, JS, React, Angluar, Node, General, HTML, CSS (to start)
+        - Use enums and give the users only options from the enums class to choose as a category
+            - Means for now users can't add new categories, just has to be added to enums in the code
 
 
 
